[package]
name = "wordbomb-external"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version = "0.43.0",features = ["Win32_UI_Input_KeyboardAndMouse","Win32_UI_WindowsAndMessaging","Win32_Foundation"]}
rand = "0.8.5"
mouse_position = "0.1.3"
# pyo3 = {version = "0.17.3",features = ["auto-initialize"]}