[package]
name = "wordbomb-external"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
path-absolutize = "3.1.1"

[dependencies]
windows = { version = "0.43.0", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
] }
rand = "0.8.5"
mouse_position = "0.1.3"
windows-capture = "1.1.7"
opencv = { git = "https://github.com/TDiblik/opencv-rust-nightly-compilation.git" }
# pyo3 = {version = "0.17.3",features = ["auto-initialize"]}
libloading = "0.8"
rusty-tesseract = "1.1.10"
image = "0.25"
eyre = "0.6.12"
